--- a/sass/register.scss
+++ b/sass/register.scss
@@ -1,2 +1,114 @@
 @charset "utf-8";
-
+body,p,div,ol,ul,dd,dt,td,form,h1,h2,h3,h4,h5,h6,input,select,textarea{
+	padding:0;
+	margin:0;
+}
+body{
+	font-family: "宋体",Arial;
+}
+a{
+	text-decoration: none;
+}
+ul,ol{
+	list-style: none;
+}
+body{
+	width:100%;
+}
+input{
+	outline: none;
+}
+/*header*/
+.header{
+	width:1200px;
+	height:76px;
+	border-bottom: 1px solid #ebebeb;
+	margin:0 auto;
+	line-height:76px;
+}
+.header_left{
+	float:left;
+	padding-top:14px;
+	margin-left:126px;
+}
+.header_left a:first-child img{
+	width:130px;
+	/*height:50px;*/
+	padding-right:10px;
+}
+.header_right{
+	float:right;
+	padding-right:108px;
+}
+.header_right span{
+	font-size:12px;
+	color:#666666;
+}
+.header_right input{
+	width:62px;
+	height:30px;
+	border:1px solid #dddddd;
+	font-size:12px;
+	color:#666;
+	border-radius:2px;
+	background:#f7f7f7;
+	font-weight:600;
+	cursor:pointer;
+}
+/*content*/
+.content{
+	width:1200px;
+	margin:0 auto;
+	overflow:hidden;
+}
+.content_left{
+	float:left;
+	padding-left: 134px;
+	padding-top: 50px;
+}
+.content_left form input{
+	margin-bottom: 22px;
+	width:328px;
+	height:18px;
+	border:1px solid #dddddd;
+	color:#adadad;
+	font-size:14px;
+	padding:10px;
+}
+.content_left form input:nth-of-type(4){
+	width:176px;
+}
+.content_left form input:nth-of-type(5){
+	width:146px;
+	height:40px;
+	border:1px solid #ddd;
+	background:#f7f7f7;
+	cursor: pointer;
+}
+.content_left form input:nth-of-type(7){
+	width:350px;
+	height:50px;
+	cursor: pointer;
+}
+.content_left form p input{
+	width:14px;
+	height:14px;
+	background:#f7f7f7;
+	cursor: pointer;
+	vertical-align:top;
+}
+.content_left form p{
+	font-size:12px;
+	color:#666;
+	padding-left:60px;
+}
+.content_left form label{
+	text-align:right;
+	padding-right:10px;
+	color:#666666;
+	font-size:14px;
+	font-weight:600;
+}
+.content_left form label:nth-of-type(3){
+	padding-left:16px;
+}
